5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1758_1583.log
== TEST (2019-05-28 16:12:28) 
-- CODE:

n = (input("digite um numero multiplo de tres ou tres: "))
n = str(n)
i = 0
while(i<size(n)):
	print(n(i+3),".")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(i<size(n)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:20:33) 
-- CODE:

n = eval1(input("digite um numero multiplo de tres ou tres: "))
while(i<size(n)):
	print(n(i+3),".")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = eval1(input())
NameError: name 'eval1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:20:51) 
-- CODE:

n = eval(input("digite um numero multiplo de tres ou tres: "))
while(i<size(n)):
	print(n(i+3),".")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(i<size(n)):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:21:09) 
-- CODE:

n = eval(input("digite um numero multiplo de tres ou tres: "))
i = 0
while(i<size(n)):
	print(n(i+3),".")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(i<size(n)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:21:24) 
-- CODE:

n = eval(input("digite um numero multiplo de tres ou tres: "))
i = 0
while(i<size[n]):
	print(n(i+3),".")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(i<size[n]):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:21:57) 
-- CODE:
from numpy import*
n = eval(input("digite um numero multiplo de tres ou tres: "))
i = 0
while(i<size[n]):
	print(n(i+3),".")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:22:26) 
-- CODE:
from numpy import*
n = eval(input("digite um numero multiplo de tres ou tres: "))
i = 0
while(i<size[n]):
	print(n(i + 3 +".")

-- ERROR:
File "XXXX", line 6
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:23:40) 
-- CODE:
from numpy import*
n = eval(input("digite um numero multiplo de tres ou tres: "))
print(len(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:24:02) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
print(len(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:26:54) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
while(i<size(n)):
	print(n[i:i])
	i = i + 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:27:27) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
while(i<size(n)):
	print(n[i:i +2],".")
	i = i + 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:27:57) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
while(i<size(n)):
	print(n[i:3],".")
	i = i + 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:29:30) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
x = array[.]
while(i<size(n)):
	print(n[i:2 + x])
	i = i + 2
-- ERROR:
File "XXXX", line 4
    x = array[.]
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:29:43) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
x = array(.)
while(i<size(n)):
	print(n[i:2 + x])
	i = i + 2
-- ERROR:
File "XXXX", line 4
    x = array(.)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:29:53) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
x = array(eval(.))
while(i<size(n)):
	print(n[i:2 + x])
	i = i + 2
-- ERROR:
File "XXXX", line 4
    x = array(eval(.))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:30:25) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
x = array(eval("."))
while(i<size(n)):
	print(n[i:2 + x])
	i = i + 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:30:42) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
x = array(".")
while(i<size(n)):
	print(n[i:2 + x])
	i = i + 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:31:34) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
x = array(".")
while(i<size(n)):
	print(n[i:i + 2]+ x)
	i = i + 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:32:18) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
x = array(".")
while(i<size(n)):
	print(n[i:i + 2], x)
	i = i + 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:57:22) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
k = 3
msg = ""
while(i< len1(n)):
	if i == len(n)-3:
		msg = msg +n(i:k)
		i = i + 3
		k = k + 3
else:
	msg = msg + n[i:k] + k
	i = i + 3
	j = j + 1
print(msg)
print(msg)	
-- ERROR:
File "XXXX", line 8
    msg = msg +n(i:k)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:57:39) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
k = 3
msg = ""
while(i< len1(n)):
	if i == len(n)-3:
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
else:
	msg = msg + n[i:k] + k
	i = i + 3
	j = j + 1
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:58:01) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
k = 3
msg = ""
while(i< len(n)):
	if i == len(n)-3:
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
else:
	msg = msg + n[i:k] + k
	i = i + 3
	j = j + 1
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:58:30) 
-- CODE:
from numpy import*
n = str(eval(input("digite um numero multiplo de tres ou tres: ")))
i = 0
k = 3
msg = ""
while(i< len(n)):
	if i == len(n)-3:
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + k
		i = i + 3
		j = j + 1
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:59:15) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 3
msg = ""
while(i< len(n)):
	if i == len(n)-3:
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + k
		i = i + 3
		j = j + 1
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:00:33) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 3
msg = ""
while(i< len(n)):
	if i == len(n)-3:
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		j = j + 1
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:00:59) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 3
msg = ""
while(i< len(n)):
	if i == len(n)-3:
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k - k + 3
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:01:35) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 3
msg = ""
while(i< len(n)):
	if i == len(n)-3:
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k - k + 3
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:01:48) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 3
k = 3
msg = ""
while(i< len(n)):
	if i == len(n)-3:
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k - k + 3
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:02:02) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 0
msg = ""
while(i< len(n)):
	if i == len(n)-3:
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k - k + 3
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:03:06) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 0
msg = ""
while(i< len(n)):
	if( i == len(n)-3):
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:03:21) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 0
msg = ""
while(i< len(n)):
	if( i == len(n)-3):
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)
print(msg)	
-- EXECUTION TIME:
0.569192
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
......
......
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
..
..
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:03:27) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 3
msg = ""
while(i< len(n)):
	if( i == len(n)-3):
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:03:36) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 3
msg = ""
while(i< len(n)):
	if( i == len(n)-3):
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)
print(msg)	
-- EXECUTION TIME:
0.32939
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
987.654.321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:03:52) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 3
msg = ""
while(i< len(n)):
	if( i == len(n)-3):
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:03:55) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 3
msg = ""
while(i< len(n)):
	if( i == len(n)-3):
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:04:22) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 3
msg = ""
while(i< len(n)):
	if( i == len(n)-3):
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)
print(msg)	
-- EXECUTION TIME:
0.52988
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
987.654.321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:06:59) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 3
msg = ""
while(i< len(n)):
	if( i == len(n)-3):
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:07:07) 
-- CODE:
from numpy import*
n = input("digite um numero multiplo de tres ou tres: ")
i = 0
k = 3
msg = ""
while(i< len(n)):
	if( i == len(n)-3):
		msg = msg +n[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + n[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)
-- EXECUTION TIME:
0.465207
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
